# starfinder

./: CMakeLists.txt
include/starfinder/: parsing.hpp
src/: parsing.cpp  render.cpp
